# HP_Mandelbrot

./: .gitignore  CMakeLists.txt  README.md
data/: seq_bench.txt  seq_bench1.txt  seq_opt1_bench.txt
src/code/: Color.cpp  Fractale.cpp  ImagePNG.cpp  Main.cpp  MandelBrot.cpp  ManipPNG.cpp  exemple_png_mistral_ia.cpp
src/headers/: Color.h  Fractale.h  ImagePNG.h  MandelBrot.h  ManipPNG.h
